@@ -2,25 +2,27 @@
 Hash: SHA512
 
 DIST algopy-0.5.1.tar.gz 135183 SHA256 509e3ec6068bd6ed4c336546f8a8d84aa1083c2fd50a1a4f4d26df606bd0e901 SHA512 384e22e89db7bc999aad29269d0f9669d4b72f3cd08860a4346801470b5b912d63cea8493c902639f35526e53979771dea8c8b3caf2d431ca45bb47892cd1308 WHIRLPOOL b8121f3106d5b05e60ce81517531d4d0de6756dc7fa2af11eea0c2fce55cfc9a306dfd928fc778886f4742308e7bea12ea49eed87d11438fc1e6efd274d0d282
+DIST algopy-0.5.2.tar.gz 148172 SHA256 a87aeb8a406fd26a3aecd6f2d7634135411ce77b9623665c51cb8a194fb76234 SHA512 9c8cd6947050d39d312836c14b790acab4ccdc9e8fcb060916f777a330da35ea8c7f987c26e3116da8a7a3bd004860d5aef789e74768c21c687febcfffdf6444 WHIRLPOOL 966d21c2d71eddba0d277706c3a88d14d76024bba60433ab8dd4e45459cbef1f08efd141debd05b039c9180618f13c23f92cb68bad6fd648109f1a3b3b69d5fc
 EBUILD algopy-0.5.1.ebuild 783 SHA256 fe7b7c057737ecb2db72de154d49e980b989b8ca47e00a0690cf8c4408daa64d SHA512 0fdf2cd71d1df020c140a7a9dbe77a6ab76fab2c7bc04ff620c80ab18c5ffae1724330b267f0d131e317e16e6e502ace38d03b7b8def330f10f02034e96b3fdf WHIRLPOOL c8e898aab5ad67f6c2ee6041efcdc541408d043e3cbb30b5323e9290417efb3bb772af49a4cf377634aa096b94dec774570bf1cfca37b81c8e7c86274f060656
-MISC ChangeLog 350 SHA256 0d3d443ba15c1c924e6d3cde1c6673fd7d5244ca54c4a3fc0f6748307649f4fe SHA512 5bafe8e8b5bb9a7524d5bd16074fb11ae4f7b877dcacaa94cd28f32eeddbcd67b544bb8643401e9a32c618fa8313683d1f85897af0bea0d03c7c48601e1c63f1 WHIRLPOOL d5d876f6d3845a94819e189b8070a49409f9bf4ead531342d166068cf6d5820ca93b098e4eec526ba59ee156413fa9a2baa2e640a3ab36e0cf6140f8f85dd9ba
+EBUILD algopy-0.5.2.ebuild 783 SHA256 9c3c2fc383a6244520717980816544a0dbf01515e5c8a434ceaa2fe661e0e6de SHA512 fbded1921722bab84dab0b3a7d853b6ab6fa085741234fe22ec1122b38579e9e2cc2939a19affe3916a2788b8e09c771d32d05246040049307993942bee3ed0d WHIRLPOOL 611e089ef00daffb4d0390ab50b55bcb82044d3d669137c71473ca2a728ec5eea9c56c2996755865e4c35c10415d60e0cf496ed35b158700fce958d3abfb2fba
+MISC ChangeLog 464 SHA256 b1f74fc6de384d3da0973cb232c2a8040835ce78f52c327dfafdcc79dfd8f98b SHA512 f7b4ea1c8af72e6fcfad41519eef520c17b2317e27c73ec1f158809e1d41bcd979d5fdb6cc4553c7dc07f33a2db365112306860b46226b32dd40e29aa2d03baa WHIRLPOOL e14d48a1379608193c3b0cf7653c83ab43ac7c5f66cad3b7eea97306fd4a161003cb0d62339af0b0b864d93bce308d9e372d2579f7f4a412c4bcee2f3c430188
 MISC metadata.xml 236 SHA256 feedd499ae6ddebc364ebb0f38d08bfbcc6b5d499f805a307a9367fb82dd12e8 SHA512 02882c2ecdf4fe400bf3e4455df1feae173e12b6fbb09181ea50541bb9dbf43780a0ab00fa799ccf5b7f2c27dcf9d854e16146cfb336ff3270a7b4369e451860 WHIRLPOOL b6580a9428931142ea961e985e6b5c736ab716eefb85706692c780c11f97d6019be488493c2e2a51b7ae8b480be80276edddb2858fe19684d48df64433475e06
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU9c5rXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirXS8P/1lH3QXG064ZpHFGJYtBQVnB
-LBg6SkL1jjn2uJa4cesvenerl+IKRsgbcIy8XqChdrbwIQLNDiGkQNvPiB+x5kaI
-c/JpPW5GgWRC7Szi5xftaHAIfv1Lze00+p2ue0/ANL1Rybh2UYNFxER+DCLzlSlc
-Dniuc/o9MfLPusSLGUzmBkMtnuNj+4vZpRsq8TUK4iNYHgNh7atyMlkY3qFRoygb
-dS/DuSb8QJjWHBl61BwzmJ1LDUPI3zceJX1L3Y1tHVO3/J21C/jRzhwRB+BeIi5y
-HBlPlc10Wn4Ghoz46EAOMr7yLQ4pYuUqp+1vYfToCq1KxiaWPKk8620h1jVCjJbz
-zgzjn+jvMM/A8HvG8x6JdUVyFAGdFSfIR4JjAVihB+aSUk0hhVW0SpqyPVXDlYq0
-cK6qAv2pTtEXu2OuY3UIKnBLLeHf0bnc6PcoQVEtVMcuhJZNdVnNUOft8GHYU820
-uAVyi1Bnwan/Z15JS7sQLbxVVBVT8OO8I0aSkEICBpFqkiHJeNR8vRNmaXrZgQl3
-zvPz0XkrxtjruE+PzjUKNNQyxT3UBOMAfXGQ95hfVCJy31TzLeQ1hYIrft2hlObJ
-lMyEpdKzz2rTvgZ3FwAk8PkkBORUvIHggyjAT+MFHTAsRQgPhGaF8OdRwhuLekIj
-IB5IP0SK1ZUno//Qi0ke
-=bxAn
+iQJ8BAEBCgBmBQJVZYeoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiajcP/jvIk7VfBbycopBwBCyvlLLt
+9i/Bw7RZz7oBo9O7ZuSDU35UUzloCt77FJRCgBBUmHYNBvKG2HK+Bnhog7DszwoX
+l/+uc7YbqHhOSna5QIt6qqJo0iFm2CQvTIKMNN3Qi+aVQjR1VvTDiHuoHvuhW0IB
+LPCMgeMaBmvCzUpuUxDTTZbnTiEDi8wmW+WAh/FDDVj6hZum26m8Mq5urEyFrk75
+FBOnWQeKYJfEWxAp/NzLOYJ0TYwxq+JJOhJVzMlDEEbVvDFcDt9FwZPBtaAuq3bS
+VsTq2coBmp/p7pno1NYV9C5YWMqyPHN/joY4tl7Ha4ZuBDSVKiCso7+o9yhWNhPi
+uoNIpXuKysVSsGrab4xb9CiO061xva1td3BC58S5dBNc3rBYJuFHI5OukLmlkVrL
+gLZxwNMRW+Ql4zsYXPKzfaMXmpr5g1Jw6hmqJ+iATgCYRs2366PWqjosSPsnHEX5
+U4HUZkdi3qcglckcPLMHCUZ4+vVbJadxMDbSXtLKYuv7dQ4+JzguTA8cttvuj7R/
+2/NVt8FlpBBGjlEgrk4fAsU+Ckg182+bGxBQbaezytiLBbJELlzoy28QcY7Oa6T+
+alRqvC5SrqfPyLtQjKybJIXGBf+d8Mg5l8QjidOJc9JYK4WfK+dF+354r7UlCdaS
+rQlIb4PC1WY8kGBhNTj2
+=5hCW
 -----END PGP SIGNATURE-----
