@@ -1,31 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX markdown-2.2.0-tests.patch 3555 SHA256 881c545feb128fc9e5367a3aa550e032617ae194c171f094063e3d26fb574e68 SHA512 5aee58ea26dca1d801f4b83a02e3b405c2ac8d8b881bec11e1e0b84c676a2242309bdd5e7d94f5a892893d068c0dd2ffaf842c62ec34156ba227972dc86b93dd WHIRLPOOL fc5125f6e62961d3db3e559e5daf8f81705561694ab80501e14559b4d91c7cdbdd6f35bd0832c0a7651a7dad1bce87b7d3ee3564edcdf84294caad31bd7018dd
 DIST Markdown-2.5.1.tar.gz 288970 SHA256 8f81ed12c18608a502828acb7d318f362c42f4eca97d01e93cadfc52c1e40b73 SHA512 27f0d3909d6aa1e0ae15403da1cdfafcbfd463d7a236e0ea0cf02c55efa8f863c2554d54e20b0d9f58d80502dbf333120431474f16c64883001e5a318866eeb0 WHIRLPOOL 88f76fcb744ad6b8429442de409275c655a85039475d6dab11031a141e148286cc56d7865f590b432bfcf91af4965963989dae9a68a01e6931f367f425f83420
-DIST Markdown-2.5.2.tar.gz 291696 SHA256 284e97e56db9ada03ede9c0ed2870ca6590ce7869f3119104d53510debf1533d SHA512 603853586fa61dec7665a4e5ef21549adb0aa4309b0f67aea804bf749ba76ea94b09b17c24a37e25d409575ee149d3baaaf77c3dd4dcf74793c8106830fae28d WHIRLPOOL 88a21531ffa1d3059c79324d376b55cfafc77ea94330e1a5b0995c8bce14473c76a8a2cb37d52278754f1884126e4ebf78f102064a0bd52f33104b233cf4ea0b
 DIST Markdown-2.6.1.tar.gz 298074 SHA256 b5879b87e8e5c125c92ab8c8f3babce78ad4e840446eed73c5b6e2984648d2b1 SHA512 53e11c5d4feacdb8210427da65b6b09453e8c904e86b42095a80132a4b67e926ba974458769e5227bfeaddd3bba5f6bd7ca7e3385951982ec982f63989119d78 WHIRLPOOL 58b6d87354ee19aac7ad1567e10f2cdc99c1aa980d3bee2fee81a5ccb5e70f43d13750dfaf1df9a42c00f3d35664731b52bfa1246271907f5a3422281ede1cc6
-DIST Markdown-2.6.tar.gz 298272 SHA256 e1c8a489bb7c7154bc5a8c14f0fd1fc356ee36c8b9988f9fd8febff22dd435da SHA512 705033921ed970ab486fd3ccfa0000fbe5622105226e2f365f654d25e22875eb08d21958a5f2e20069e23cecc8dc9621a5ad15d5e15541ee53d4870cca69f32e WHIRLPOOL 0b9a37d77c62278079bad213d9afa94c7f14824fb1258bc55a4bbf27cd3112ffe2631a11389d1c01869716987c9b38a6d4385cd3c0c3892e06718f7519856bbf
+DIST Markdown-2.6.2.tar.gz 298231 SHA256 ee17d0d7dc091e645dd48302a2e21301cc68f188505c2069d8635f94554170bf SHA512 a69dabf65187f54d200f59191a149bfe2109f94ffc5d003e15c2e6333c0b5fdeebfc4136842d7be5a15bc903b7a22120a4ccba2722858194c43fd09cd8fbea16 WHIRLPOOL a3c74f150e6e140b0b0500d0694b89b8e6836adef66cd2c14a1ad5ff8d4dc202b35fae8a0c9683e53030fc80792885cd4b22c46729963a683ebbbb5101963dd7
 EBUILD markdown-2.5.1.ebuild 1365 SHA256 874f86a86ed0dca6613b1907e4fd02b8ce688d37e9a9ff26a03fbadcfa62c728 SHA512 85af7c0103a114811f944915b329f1c7cf48bba54629bc1a46a80da451074cdb22236f7d498460928cfb43be94c2ef1f80b1b240899e6d3b5e324d10a8d7ddff WHIRLPOOL e1601edf8553ba15282975763a03fd3aa3a12989fd12f91ddc1c6b1b0b7d917d31ee34aa73702ec1529145fbc8c7fb1e41917c52814ae94360b3a397804744c8
-EBUILD markdown-2.5.2.ebuild 1380 SHA256 99d5d440b24e1127136ee7571992c5562df0883c59f0fe21af640f14cf5908ce SHA512 f8b14930382a7a495fa81d9fc4fc046dd6e5564068a20f2dcee2e47154f496bdca00b07ddd3fbbe66bf02cf05c16775e9daa4d0de1c3ec6cf4b5c07627266254 WHIRLPOOL 5a613c2ef673e5542f09ed8a92d5f264caadef375dcd36a7dc82fc41c217ab004cb0056c5cb4d3678e26abdfa851279838138d7e66b3daad28adaadeea0fba31
 EBUILD markdown-2.6.1.ebuild 1385 SHA256 1796f5f514f2774c422f750583d22cab732e6ff308b79992a803f2f57cfa74ff SHA512 0198204aa88145bf0326c52e722fe2faac6eaccb0ff1a1b4a561cd9a45d1fa58758b59d04d48e3925fd0a3c3f9deb16de3efcef863affa7629f324d16e6e9eee WHIRLPOOL 3c078c02fb0c5e57edf198e3a5b9f51f1ddf677ece8b1e1c7731219772e50bc4a7ee076fc524f159b8d4947d87e74b3ab098356607d7836dbc1ed56d231db312
-EBUILD markdown-2.6.ebuild 1374 SHA256 4458b25c5d0db2be0a4451c5ed0dac839dfd4ea79702a5b62c949d9841b63408 SHA512 63edec08a267e162ed0c171604e06993f99e64596efb0b3d8573ff8a67be483cb237ddba9d500286fc3207ad697accf72ba6d732eeb5696b1447ba60e5a55e9a WHIRLPOOL 2840c3497ab78aa650af49c832eefc96cf7b437c34ce3cb580913e8ee346a84dce199f02a7040f68a1cb6e62779ef3203c925a49d3e38f21ef95341686b90531
-MISC ChangeLog 9192 SHA256 7c319472963e1d5e488462d790e6fed9d130f6276eb9965cbe3c1923787d5055 SHA512 d5228a10172cd9c7ebf3712e54b1e6495694dd6dc47afddde6be720d51826816f06ba9c08ec28f7b5e900dce2aa6a0eebc8732f8d4f06937a005cfca037b2b15 WHIRLPOOL 0d25e7b2e9e4ee0c5ca5fded4d2f98cb29ad998fd05272c820a9ea06ec3c4760e06aad79463a8222913a804f30b0fb074e763dbbd07d5352939f00a0578eaf94
-MISC metadata.xml 307 SHA256 3ec0e0e960786c21e3aef2fefe59d5cb727804b728c0d5bd67ef665ad514b0c5 SHA512 7668e9bc82401b223b3ce12d3231304febdbf93d215f8b9707cf64d5d4a879f6a8352aba5702b134d3c99c8efe7903ea3eb6c4125b49567e3301558188e7bc07 WHIRLPOOL 3340bf1c34c19340d8b7006b0f1822491ccd5381e0f41c8920e9c273937443e7bc9fc6bc3223421e363e2c20793c6cb8bde5de5993a4d7389c941fd6bea830b6
+EBUILD markdown-2.6.2.ebuild 1371 SHA256 477f1e8d17a233b2e7128f2eccb7b78e0f018b557dab1993ff12c5fa02220e16 SHA512 99c26e634da4b7a80e7f0ac1fc142d98f3b0bdd4943be4d87ea182dcdc5a4bd3556c74af711420cdfc7534bf642b75238c00fb3de81b7908ba5cb033c11bb6e8 WHIRLPOOL c5521ba2c53489139d963fce08dba77d5bffe28b70ed53dca2ac5b1841a886594d5ea050baddbd4ac728162bb1fcd5db05a1937f394b731cd6052e318944dd3b
+MISC ChangeLog 9373 SHA256 7dbcdc88c9aa7c23af4fbe5c88a4b2c4f6391d0c29d450fea73a6b7f96d1b204 SHA512 3dbce6d8f9d211b2bd8a60d0ca57b51e920426c5ca35c081a5ccf8362215b78fbb0febd5b70961814f800e752e4ed989541ddcf05d541e4540adaa5c0fc7837c WHIRLPOOL 712306dee1d8ea55c75d22ecbf5d3796bd36058898764f2ce08f9081b70e01b4cacac54453936a1636b651ce10a31641056d434718e9b52e5eacb6765d3f76f9
+MISC metadata.xml 316 SHA256 68d6456fe880e3c27d2528304476a334612917d18f375ccb7388dab214e2a5b4 SHA512 0d0fa33a75a376afb564bf56ce2e0f1f41171ccc5ce879601146b945fa0dbaf4e32cd58f0a375e599cc1c8c6e793cfcc05be847c635cc21ef410450f5fb22ec2 WHIRLPOOL 49475f76db3c2e1e275fabbbcd882a005b429ff330e3a3ed92307c3b7796da606883432a3bfca9ccd2575d00fc9833602c173f7fb632fee35e8f628bfc2d7675
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVXvuWAAoJELp701BxlEWfBJgQAI41HDPyKfig3huYoFIs+2Ss
-ueL5ZUG03obChY9mLy1mfhj8cnfQo5jLZW/sRD0oo4KZG6mb9M80Qc/OEVldXV1I
-PUPXel0kTxwfTB0BEKgcnNqj7NeLv2AzoCO1XQuEPCaR2THb113YIl4t+hzoE3/Z
-7MWb0Xz2VmyoP662CZe7+bR5jlNHElI1lbaVnspSMKhjPfrFsNiSdgyd0hv+m1yN
-d3+BR8maEf2bdtIFFOh9OXGo4qD72P6eRKMErrZccGTwvlqSVX/E0lOqdhxGIhuO
-pVR8kaU9jK3qCRR6yuCCFeeo+8IqFzV/zBhEutztaXQJKWHAL2B3VuIdnFRHsDLC
-Xsc4q3szt8VDYWiSypRVFhzztDw45gevR4Bp0Dkw8Mv8JyK1quLcXgideabqJCVj
-/Gc/YdxwL5B4Js+KPhUQLQBJyriOEU1XF8ezjdnEjHuD0R2Q/6ZjtziRGPHgKjpI
-+4mQGTV9raeg9/ytEsfrxF2ZimdOrPBSBmIoUxqyGq7T07OUiJrL4+BaOcL3zK8a
-RnLCDA5f4UJ7BwOKMJpaBtQHHT6wS1RyCUiXIQJCj9zi9I/xJIez5QEmPSS4DBiy
-ayXJqLgxQqvYTyRgS/AkVlcjhmXZna3+MY6LCGojwAGkDlt0z0UUNq7/zWlDKmiQ
-nCZCenL+5uR8C3HDJKs6
-=8rkJ
+iQJ8BAEBCgBmBQJVZYZ7XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmi6vYP/Ra9K5l8EvUANsKjotYoDriP
+ZlbVxWBvc/pAvK42O+gYHrMvpTgTZnBRdlS8zfb2SRWwDIHUh/6BOkSXvY5ip1Ng
+bX8ti8UjxuUL1pfA9iZONO9d4/fZMgSHVEI6q2abWsBqdHWXOJMErdcNGztmuUcj
+qLMZzKfiT85XA0xnMAihKRjRIOtlCx2QV8yPpCXbTNc6Ekm81/AqKGjUWSF2bnzI
+9KeCyizu5UNlp4xC/QQ5jeQAh8qERqBx1DDRJ7tpvKJrUHCMPx3daCMpePoD1/d1
+5e+miFVy90g7MHjbonIE2v13SKSD5AnnrZ7nadgoYgtQuee8Tb7dpc06REJRjTYk
+/Xf9C4jQYqLc94bnjutygdd5Y992zmkmJRB7y1li0O3bAOTkesKhCwCQ9izlDquF
+8zgqhuUa91czKmjqLBrBCVCKHvCEC//Rd0lr4dm7ApDky44Ez9T4sRbJwtD8b4am
+kMOB0Eo7Iyr/urL+f05Lu0lVY2o6lpUqyCeP4jmSOtMwq4dYooDMoxby0CjX9n0a
+aQnZwxOidz98d2U61z88LlwXNKlZgi3nyL5m6cXe9+ZQAHhQYv2ZE4o3+rz9xqJo
+C1u/axBCzGq50uQOjV/QhIzVL07fqi2DodSV1I5cBW/+c7ahGwLktrWLbol/7Isk
+2Xa+xOTYg+5Yqt4eg11w
+=az/2
 -----END PGP SIGNATURE-----
