@@ -1,9 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/markdown/markdown-2.6.ebuild,v 1.1 2015/02/28 07:48:41 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/markdown/markdown-2.6.2.ebuild,v 1.1 2015/05/27 08:55:22 jlec Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy pypy3 )
+
+PYTHON_COMPAT=( python2_7 python3_{3,4} pypy pypy3 )
 
 inherit distutils-r1
 
@@ -16,11 +17,14 @@ SRC_URI="mirror://pypi/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
 
 LICENSE="|| ( BSD GPL-2 )"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~sparc ~x86 ~amd64-linux ~ppc-macos ~x64-macos ~x86-linux ~x86-macos"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
 IUSE="doc test pygments"
 
-DEPEND="test? ( dev-python/nose[${PYTHON_USEDEP}]
-		dev-python/pyyaml[${PYTHON_USEDEP}] )"
+DEPEND="
+	test? (
+		dev-python/nose[${PYTHON_USEDEP}]
+		dev-python/pyyaml[${PYTHON_USEDEP}]
+	)"
 # source cites pytidylib however from testruns it appears optional
 RDEPEND="pygments? ( dev-python/pygments[${PYTHON_USEDEP}] )"
 
@@ -32,9 +36,8 @@ python_compile_all() {
 
 python_test() {
 	cp -r -l run-tests.py tests "${BUILD_DIR}"/ || die
-	pushd "${BUILD_DIR}" > /dev/null
+	cd "${BUILD_DIR}" || die
 	"${PYTHON}" run-tests.py || die "Tests fail with ${EPYTHON}"
-	popd > /dev/null
 }
 
 python_install_all() {
