@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>python</herd>
-	<use>
-		<flag name="pygments">Enable fancy pygments support</flag>
-	</use>
-	<upstream>
-		<remote-id type="pypi">Markdown</remote-id>
-	</upstream>
+  <herd>python</herd>
+  <use>
+    <flag name="pygments">Enable fancy pygments support</flag>
+  </use>
+  <upstream>
+    <remote-id type="pypi">Markdown</remote-id>
+  </upstream>
 </pkgmetadata>
