@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/certifi
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/certifi/ChangeLog,v 1.13 2015/04/08 08:05:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/certifi/ChangeLog,v 1.14 2015/05/27 08:50:50 jlec Exp $
+
+*certifi-2015.04.28 (27 May 2015)
+
+  27 May 2015; Justin Lecher <jlec@gentoo.org> +certifi-2015.04.28.ebuild,
+  metadata.xml:
+  Version Bump
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> certifi-14.05.14.ebuild:
   Drop old Python implementations
