@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/markdown
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/markdown/ChangeLog,v 1.70 2015/05/22 09:49:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/markdown/ChangeLog,v 1.71 2015/05/27 08:55:22 jlec Exp $
+
+*markdown-2.6.2 (27 May 2015)
+
+  27 May 2015; Justin Lecher <jlec@gentoo.org> +markdown-2.6.2.ebuild,
+  -markdown-2.5.2.ebuild, -markdown-2.6.ebuild, metadata.xml:
+  Version Bump
 
   22 May 2015; Agostino Sarubbo <ago@gentoo.org> markdown-2.6.1.ebuild:
   Stable for amd64, wrt bug #550128
